_other/评测/审计运行轨迹/V2/监考提示词.md
# 审计运行轨迹 V2 监考提示词

> 使用方式：把本文件全文作为一个完整任务交给监考 AI。不要截取其中一部分，也不要把试卷中的
> Agent 输入直接发送给监考 AI。

## 角色与目标

你是 nanobot 审计运行轨迹专项评测监考器。不要替被测 Agent 答题，不追加提示，不手工制造
Event、Payload、恢复关系或 child 结果。必须通过真实浏览器打开 nanobot WebUI，在全新 WebSocket
Session 中发送权威试卷的唯一输入，持续观察 UI 与 Audit API，最后按试卷评分。

本任务只授权部署 V2 的固定 fixture、创建一个新考试 Session、运行 V2、读取安全 Audit 证据并
写入新的 V2 运行记录。不授权修改产品代码、配置、权威 fixture、会话历史或权威 Audit 数据。

## 工作目录与权威材料

仓库根目录如下：

```text
/home/kdm/TL-WorkSpace/TL-Project/AIworker/nanobot-kdm-2k
```

以下文件共同构成本次考试的权威资产：

```text
_other/评测/审计运行轨迹/说明.md
_other/评测/审计运行轨迹/V2/试卷.md
_other/评测/审计运行轨迹/V2/监考提示词.md
_other/评测/审计运行轨迹/V2/更新清单.md
_other/评测/审计运行轨迹/V2/fixture-manifest.json
_other/评测/审计运行轨迹/V2/fixture_stage.py
_other/评测/审计运行轨迹/V2/fixtures/
```

## 一、授权边界

开始前完整阅读 `AGENTS.md`、`.agent/security.md`、主题说明和 V2 试卷。字段名称和接口行为以
当前产品代码及实际 API 响应为准。

本任务允许在创建 Session 前调用 V2 `fixture_stage.py`，仅向实际 Agent workspace 的
`evals/audit-trace-v2/fixtures/` 部署 manifest 中的三个文件，并在取证结束后安全清理。除此之外，
只允许创建新考试 Session、读取安全审计证据、执行试卷指定测试和创建本场运行记录。

以下行为一律禁止：

- 执行 reset、checkout、clean、commit 或 push，或覆盖用户修改。
- 修改产品代码、配置、试卷、权威 fixture、manifest、staging 工具、历史 Audit JSONL、payload、catalog 或索引。
- 手工复制 fixture、绕过 staging 工具、覆盖不同内容，或清理未通过 manifest 校验的目标文件。
- 为了通过考试而追加消息、重跑失败步骤、手工补 child 结果或伪造截图。
- 打印、截图或归档 bootstrap secret、bearer、cookie、ticket 及其他认证材料。
- 在安全摘要中保存完整 Tool 参数、结果或 Payload 原文。

Graph 证据只记录安全 ID、类型、状态、计数、时间和关系。Payload 只能在试卷要求的显式 UI
操作中查看，不能归档原文。

## 二、环境前检

前检最多 10 分钟。记录安全摘要：`git status --short`、当前 commit、gateway health、WebUI 与
WebSocket 可用性、Audit API/index 状态、`spawn` 可用性、Agent workspace 的容器路径、宿主机
路径及 mount 证据，以及 V2 manifest、staging 工具和三个权威 fixture 的 SHA-256。

必须确认 gateway 与 WebUI 来自同一包含本次功能的提交；若页面出现“当前 Graph 未提供原始
Event 导航信息”，先判定是否仍为旧 gateway，不得直接给功能判失败。关键能力不可用时结论为
“评测环境不可执行”，不要发送考试。

在创建运行记录前计算 `试卷.md`、`监考提示词.md`、`更新清单.md`、`fixture-manifest.json`、
`fixture_stage.py` 和三个 fixture 的 SHA-256。
从试卷“发送给被测 Agent 的唯一输入”一节结构化提取唯一 `text` 代码块，不手工重打。

不得仅根据字符串 `~/.nanobot/workspace` 推断宿主机目录。当前 Docker 部署应验证容器
`/home/nanobot/.nanobot` 映射到仓库 `runtime/`，从而确定 Agent workspace 的宿主机路径为
`runtime/workspace`。实际 mount 不一致时，以可验证的真实映射为准。

## 三、部署 Fixture

将 `<agent-workspace-host-path>` 替换为前检确认的实际宿主机路径，依次执行：

```bash
python _other/评测/审计运行轨迹/V2/fixture_stage.py \
  source-verify --workspace <agent-workspace-host-path>
python _other/评测/审计运行轨迹/V2/fixture_stage.py \
  stage --workspace <agent-workspace-host-path>
python _other/评测/审计运行轨迹/V2/fixture_stage.py \
  verify --workspace <agent-workspace-host-path>
```

把三条命令的安全 JSON 输出写入本场 `fixture部署.json`。随后从 gateway 容器内只读确认以下文件
均存在，不读取或归档内容：

```text
/home/nanobot/.nanobot/workspace/evals/audit-trace-v2/fixtures/recovery-target/config.json
/home/nanobot/.nanobot/workspace/evals/audit-trace-v2/fixtures/unrelated/config.json
/home/nanobot/.nanobot/workspace/evals/audit-trace-v2/fixtures/child/context.txt
```

任一步失败都判定“评测环境不可执行”，不得创建 Session。禁止手工补文件或绕过哈希、符号链接、
额外文件及覆盖保护。

## 四、真实浏览器开考

严格按以下顺序执行：

1. 在创建 page 前注册 console error、page error、request failed、WebSocket close/error 监听。
2. 登录后创建全新对话，确认得到新的 `websocket:<uuid>` Session，不复用历史 Session。
3. 把试卷唯一输入逐字符发送，记录字符数、UTF-8 字节数和发送前后 SHA-256，不归档消息原文。
4. 记录发送 UTC、Session key、Trace ID 和 main Run ID。
5. 持续观察，直至 main 与 child 达到终态或总等待时间达到 15 分钟。

开考后发现产品问题时，只记录现象和证据，不现场修复，也不自动开始第二场。

## 五、安全取证

使用短期 bearer 读取并按实际 cursor 收齐：

```text
GET /api/audit/traces?session_key=<encoded>
GET /api/audit/traces/<trace-id>/graph?level=trace
GET /api/audit/traces/<trace-id>/graph?level=trace_full
GET /api/audit/traces/<trace-id>/events?limit=200
```

按下列证据矩阵核对并记录实际字段路径：

| 证据主题 | 必须确认的事实 |
|---|---|
| 三次路径读取 | 三组 `ToolStarted/ToolFinished` 使用不同 tool call ID |
| 恢复摘要 | 第一个失败节点为 `recovery_status=recovered`、`evidence_source=recorded`，且 `recovered_by_event_id` 指向第三个成功终态 Event，不指向第二个同 basename 调用 |
| 持久化 link | `recovery_of_tool_call_ids` 由试卷指定的聚焦 pytest 验证；不得假定公开 Events API 返回该内部字段 |
| 失败诊断 | Graph 失败节点包含根因、影响、恢复、evidence source 和安全 `raw_events` 回链 |
| 关系边 | 只记录 API 实际存在的 `caused_by/retry/retry_of`、`sequence`、`parent_run/spawn_branch`、`result_return/resumed_from`；不存在时记录零命中，不把 Tool recovery 推导成 `retry_of` |
| Run 结构 | 分别统计 main、child 和 continuation；没有关系证据时不自行推导 |
| 响应安全 | Graph/Events 不含完整参数、结果、query、Authorization、cookie、token 或绝对敏感路径 |

Event 分页至 `next_cursor=null`。终态后至少连续三轮、每轮间隔 5 秒观察到 event count、Run 终态
和 index revision 不变，才进入评分。

## 六、UI 与自动化验收

先按试卷第一至第五题完成 UI 操作，依次保存失败 Tool 根因、原始 Event 区域、时间线定位、
四种关系聚焦、零命中、main Run 定位、首个异常和图例的证据截图。截图前必须关闭 Payload，
确认画面中没有 secret、完整 Tool 输入或输出。

随后执行试卷第六题的原生 Python Playwright 和第七题的指定 pytest。不得用真实网络中的偶发
超时替代确定性故障注入测试。

## 七、评分与结论

严格按试卷的 100 分制评分。每道题必须记录得分、权威 endpoint 或 DOM、字段路径、evidence ID、
观察值、期望值和归因。

结论只能从下表选择，不得创造近义结论：

| 结论 | 使用条件 |
|---|---|
| 通过 | 总分至少 85，且第二、第三题分别达到该题满分的 80% |
| 有条件通过 | 主能力可用，但仍有不影响核心判定的明确缺口 |
| 被测 Agent 不通过 | 环境有效、证据充分，且被测行为不满足试卷要求 |
| 评测环境不可执行 | 基础设施或版本门禁阻止正式开考 |
| 证据不足，无法判定 | 字段或证据缺失，且无法确定缺失原因 |

总分至少 85 且第二、第三题各达到满分 80% 才可“通过”。基础设施阻断不算 Agent 失败；字段
缺失且无法证明原因时为证据不足，不得猜测。

## 八、运行记录

创建全新目录：

```text
_other/评测/审计运行轨迹/V2/运行记录/<YYYYMMDD-HHMMSS>/
```

至少包含：

```text
前检.md
执行摘要.md
评分结果.json
安全接口摘要.json
输入完整性.json
fixture部署.json
浏览器控制台摘要.txt
截图/失败节点.png
截图/原始事件.png
截图/关系聚焦.png
截图/时间线.png
截图/图例.png
```

归档不得包含 token、cookie、ticket、Payload 原文、模型内容、完整 Tool 参数/结果或 Audit JSONL
副本。`评分结果.json` 必须包含版本、权威文件哈希、Session/Trace/Run ID、各题得分、证据字段、
总分、结论和风险。

## 九、Fixture 清理与交付

完成所有 Audit 与 UI 取证后，先再次验证 staged fixture：

```bash
python _other/评测/审计运行轨迹/V2/fixture_stage.py \
  verify --workspace <agent-workspace-host-path>
```

验证成功后才能清理：

```bash
python _other/评测/审计运行轨迹/V2/fixture_stage.py \
  cleanup --workspace <agent-workspace-host-path>
```

若验证失败，记录差异但不得调用 cleanup，也不得手工删除，避免掩盖被测 Agent 修改 fixture 的
证据。将验证和清理的安全 JSON 输出追加到 `fixture部署.json`。

结束前复核权威文件哈希未变，运行 `git diff --check` 和 `git status --short`，确认只有本场新
Session 的 append-only 数据和新的运行记录。

最终回复必须按以下顺序给出：结论与总分、Session/Trace、三路径恢复判定、四类关系命中、原始
Event/Payload 状态、Playwright/pytest 结果、运行记录目录、未完成的人工验收。任何无法确认的项目
明确写“无法判定”及原因，不得省略。
